--- a/input*.html
+++ b/input*.html
@@ -1,1 +1,28 @@
+<script>
+    var i,j,k;
+	for(i=1;i<=4;i++){
+		for(j=1;j<=4-i;j++){
+			
+			document.write("&nbsp;&nbsp;");   
+		}
+		for(k=1;k<=2*i-1;k++){
+			
+			document.write("*&nbsp;"); 
+		}
+		document.write("<br/>");
+	}
+
+	for(i=1;i<=3;i++){
+		
+		for(j=1;j<=i;j++){
+		
+			document.write("&nbsp;&nbsp;");
+		}
+		for(k=1;k<=7-2*i;k++){
+			
+			document.write("*&nbsp;");
+		}
+		document.write("<br/>");
+	}
+    </script>
 
